# rusty-apple

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
configs/grafana/: new.ini
src/: art.rs  bot.rs  color.rs  lib.rs  main.rs  tg.rs  tty.rs
