[package]
name = "rusty-apple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
ffmpeg-next="7.1.0"
flager = "0.0.9"
futures = "0.3.31"
image="0.25.5"
prometheus="0.13.4"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version =  "1.43", features = ["rt-multi-thread", "macros"] }
